# SSH-manager

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  publish_release.yml
scripts/: install.ps1  install.sh
src/: app.rs  auth.rs  cli.rs  connection.rs  crypto.rs  host_check.rs  main.rs  store.rs  ui.rs
